--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js"
+    "build": "webpack --config config/webpack.prod.js && cp -R assets dist"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
